fixes table overflow

--- a/simple.css
+++ b/simple.css
@@ -305,8 +305,10 @@ details[open] > *:last-child {
 /* Format tables */
 table {
   border-collapse: collapse;
-  width: 100%;
+  display: block;
+  overflow: auto;
   margin: 1.5rem 0;
+  width: 100%;
 }
 
 td,
